<resources>
    <string name="app_name">AyProfes!</string>
    <string name="mainStringButtonBuscar">Buscar</string>
    <string name="mainStringButtonLogin">Iniciar Sesion</string>
    <string name="loginStringHintUsuario">Usuario</string>
    <string name="loginStringHintContraseña">Contraseña</string>
    <string name="signUpStringHintRespuesta">Respuesta</string>
    <string name="signUpStringHintPregunta">Pregunta</string>
    <string name="singUpStringHintContraseña2">Confirmar Contraseña</string>
    <string name="signUpStringButtonRegistrar">Registrar</string>
    <string name="loginStringHintTextViewOlvide">Olvide mi contraseña</string>
    <string name="loginStringButtonEntrar">Entrar</string>
    <string name="loginStringButtonCrear">Crear Cuenta</string>
    <string name="comentarioStringTextViewNombre">Nombre del profesor</string>
    <string name="comentarioStringTextViewFacilidad">Facilidad</string>
    <string name="comentarioStringTextViewClaridad">Claridad</string>
    <string name="comentarioStringTextViewAyuda">Ayuda</string>
    <string name="comentarioStringTextViewCarga">Carga de trabajo</string>
    <string name="comentarioStringTextViewRecomendación">Recomendación</string>
    <string name="comentarioStringTextViewComentario">Comentario:</string>
    <string name="comentarioStringEditTextComentario">Escribe un comentario...</string>
    <string name="comentarioStringButtonEnviar">Enviar</string>
    <string name="comentarioStringButtonAñadir">Añadir comentario</string>
    <string name="recuperaciónStringTextViewInstrucciones">Escribe tu nombre de usuario y sigue las intrucciones para cambiar tu contraseña</string>
    <string name="recuperaciónStringButtonCambiar">Cambiar</string>
    <string name="recuperaciónStringTextViewNueva">Nueva Contraseña</string>
    <string name="materiaString">Materia</string>
    <string name="aceptarString">Aceptar</string>
    <string name="toastWrongPass">Contraseña incorrecta</string>
    <string name="toastNombreUsuarioNoExiste">Ese nombre de usuario no existe</string>
    <string name="toastIngreseDatos">Ingrese los datos</string>
    <string name="toastSeCerroSesion">Se ha cerrado sesión</string>
    <string name="toastHaOcurridoError">Ha ocurrido un error, intente de nuevo</string>
    <string name="toastHainiciadoSesion">"Ha iniciado sesion, Bienvenido : "</string>
    <string name="toastRequiereSesionComentar">Se requiere iniciar sesión para comentar</string>
    <string name="toastNombreUsuarioExiste">Ese nombre de usuario ya existe</string>
    <string name="toastNombreUsuario10caracter">El nombre de usuarios debe tener al menos 10 caracteres</string>
    <string name="toastConstrasena10caracter">La contraseña debe tener al menos 10 caracteres</string>
    <string name="toastContraseñasNoCoinciden">Las contraseñas no coinciden</string>
    <string name="toastSeleccionePregunta">Seleccione una pregunta</string>
    <string name="toastNoContestadaPregunta">No has contestardo  la pregunta</string>
    <string name="toastAgregaronDatosCorrecto">Se agregaron los datos correctamente</string>
    <string name="toastInicioSesion">Ha iniciado sesión</string>
    <string name="toastProblemaConexion">Hubo un problema con la conexion, vuelve a intentarlo</string>
    <string name="toastIngresoNada">Falta ingresar información</string>
    <string name="toastCambioConstraseña">Se ha cambiado la contraseña con exito</string>
    <string name="toastRespuestaNoCoincide">La respuesta no coincide</string>
    <string name="toastNoingresoUsuario">No ha ingresado usuario</string>
    <string name="loginStringButtonCerrarSesion">Cerrar Sesión</string>


</resources>
