<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="185dp"
        android:layout_height="57dp"
        android:layout_marginTop="56dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryText"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtUsuarioLogin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/loginStringHintUsuario"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorPrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/edtContraseñaLogin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:hint="@string/loginStringHintContraseña"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorPrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUsuarioLogin" />

    <TextView
        android:id="@+id/txtvOlvide"
        android:layout_width="139dp"
        android:layout_height="26dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:autoLink="all"
        android:clickable="true"
        android:linksClickable="true"
        android:text="@string/loginStringHintTextViewOlvide"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseña" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginTop="408dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/loginStringButtonEntrar"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/loginStringButtonCrear"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" />

</androidx.constraintlayout.widget.ConstraintLayout>