<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edtComentario"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_width="339dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/colorPrimaryText"
        android:gravity="top"
        android:hint="@string/comentarioStringEditTextComentario"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvComentario" />

    <RatingBar
        android:id="@+id/claridadRatingBar"
        android:layout_width="248dp"
        android:layout_height="56dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:rating="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toEndOf="@+id/txtvFacilidad"
        app:layout_constraintTop_toBottomOf="@+id/txtvProfesor" />

    <RatingBar
        android:id="@+id/recommendationRatingBar"
        android:layout_width="253dp"
        android:layout_height="54dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="272dp"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:rating="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toEndOf="@+id/txtvFacilidad"
        app:layout_constraintTop_toBottomOf="@+id/txtvProfesor" />

    <TextView
        android:id="@+id/txtvClaridad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/comentarioStringTextViewClaridad"
        android:textColor="@color/colorPrimaryText"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvFacilidad" />

    <TextView
        android:id="@+id/txtvCarga"
        android:layout_width="108dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/comentarioStringTextViewCarga"
        android:textColor="@color/colorPrimaryText"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvAyuda" />

    <TextView
        android:id="@+id/txtvProfesor"
        android:layout_width="321dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:text="@string/comentarioStringTextViewNombre"
        android:textColor="@color/colorPrimaryText"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvNombre" />

    <TextView
        android:id="@+id/txtvFacilidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/comentarioStringTextViewFacilidad"
        android:textColor="@color/colorPrimaryText"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvProfesor" />

    <TextView
        android:id="@+id/txtvAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/comentarioStringTextViewAyuda"
        android:textColor="@color/colorPrimaryText"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvClaridad" />

    <TextView
        android:id="@+id/txtvComentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/comentarioStringTextViewComentario"
        android:textColor="@color/colorPrimaryText"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvRecomendacion" />

    <TextView
        android:id="@+id/txtvNombre"
        android:layout_width="185dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryText"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtvRecomendacion"
        android:layout_width="102dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/comentarioStringTextViewRecomendación"
        android:textColor="@color/colorPrimaryText"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvCarga" />

    <RatingBar
        android:id="@+id/workloadRatingBar"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="204dp"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:rating="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toEndOf="@+id/txtvFacilidad"
        app:layout_constraintTop_toBottomOf="@+id/txtvProfesor" />

    <RatingBar
        android:id="@+id/ayudaRatingBar"
        android:layout_width="250dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:rating="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toEndOf="@+id/txtvFacilidad"
        app:layout_constraintTop_toBottomOf="@+id/txtvProfesor" />

    <RatingBar
        android:id="@+id/facilidadRatingBar"
        android:layout_width="248dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:rating="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toEndOf="@+id/txtvFacilidad"
        app:layout_constraintTop_toBottomOf="@+id/txtvProfesor" />

    <Button
        android:id="@+id/btnEnviarComentario"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/comentarioStringButtonEnviar"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>