<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@mipmap/ic_fondo"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edtNombreMateria"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimaryText"
        android:gravity="top"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvMateria" />

    <EditText
        android:id="@+id/edtNombreProfe"
        android:layout_width="351dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:background="@color/colorPrimaryText"
        android:gravity="top"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvProfesor" />

    <TextView
        android:id="@+id/txtvProfesor"
        android:layout_width="321dp"
        android:layout_height="49dp"
        android:layout_marginTop="80dp"
        android:text="@string/comentarioStringTextViewNombre"
        android:textColor="@color/colorPrimaryText"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtvMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/materiaString"
        android:textColor="@color/colorPrimaryText"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombreProfe" />

    <Button
        android:id="@+id/btnEnviarComentario"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/comentarioStringButtonEnviar"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtComentario" />


</androidx.constraintlayout.widget.ConstraintLayout>